<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottomSheetNote"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_bottom_sheet"
    android:elevation="8dp"
    app:behavior_hideable="true"
    app:behavior_peekHeight="0dp"
    app:behavior_halfExpandedRatio="0.6"
    app:behavior_fitToContents="false"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="14dp"
            android:backgroundTint="@color/white"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:cornerRadius="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/closeButton"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:insetLeft="0dp"
            android:insetTop="0dp"
            android:insetRight="0dp"
            android:insetBottom="0dp"
            android:layout_marginBottom="14dp"
            app:icon="@drawable/ic_x"
            android:background="#00000000"
            app:cornerRadius="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilNoteTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/note_title"
            app:hintTextColor="@color/very_light_pink"
            app:boxStrokeColor="@color/white"
            app:boxBackgroundColor="@color/lighter_main_bg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:startIconTint="@null"
            app:layout_constraintTop_toBottomOf="@+id/closeButton"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etNoteTitle"
                android:maxLength="30"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:hint="@string/task_title"
                android:textColorHint="@color/white"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/note_detail"
            app:boxBackgroundColor="@color/lighter_main_bg"
            app:boxStrokeColor="@color/gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tilNoteTitle"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etDetails"
                android:textSize="14sp"
                android:textColor="@color/gray"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/task_detail"
                android:textColorHint="@color/gray"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>




    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>